Add contact page

--- a/contact.html
+++ b/contact.html
@@ -40,88 +40,56 @@
         </div>
     </header>
 
-    <!-- HERO -->
-    <section class="hero">
-        <div class="hero__container container">
-            <h1 class="hero__title">Find the <br>best <span class="light-coral-word">talent</span></h1>
-            <div class="hero__wrapper">
-                <hr class="hero__line">
-                <p class="hero__text">Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
-            </div>
-        </div>
-    </section>
 
-    <!-- FEATURES -->
-    <section class="features">
-        <div class="features__container container">
-            <hr class="features__line">
-            <h2 class="features__title">Build & manage distributed teams like no one else.</h2>
-            <ul class="features__list">
-                <li class="features__item">
-                    <img class="features__img" src="img/experience-icon-min.svg" width="72" height="72" alt="experience-icon">
-                    <div class="features__info">
-                        <h3 class="features__info-heading">Experienced Individuals</h3>
-                        <p class="features__info-text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+    <!-- MAIN-WRAPPER -->
+    <section class="main-wrapper container">
+        <!-- contact-info -->
+        <div class="contact-info__container container">
+            <h2 class="contact-info__title">Contact</h2>
+            <h3 class="contact-info__subtitle">Ask about us</h3>
+            <ul class="contact-info__list">
+                <li class="contact-info__item">
+                    <img class="contact-info__img" src="img/experience-icon-min.svg" width="72" height="72" alt="experience-icon">
+                    <div class="contact-info__info">
+                        <p class="contact-info__info-text">The quality of our talent network</p>
                     </div>
                 </li>
-                <li class="features__item">
-                    <img class="features__img" src="img/easy-icon-min.svg" width="72" height="72" alt="easy-icon">
-                    <div class="features__info">
-                        <h3 class="features__info-heading">Easy to Implement</h3>
-                        <p class="features__info-text">Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+                <li class="contact-info__item">
+                    <img class="contact-info__img" src="img/easy-icon-min.svg" width="72" height="72" alt="easy-icon">
+                    <div class="contact-info__info">
+                        <p class="contact-info__info-text">Usage & implementation of our software</p>
                     </div>
                 </li>
-                <li class="features__item">
-                    <img class="features__img" src="img/enhanced-icon-min.svg" width="72" height="72" alt="enhanced-icon">
-                    <div class="features__info">
-                        <h3 class="features__info-heading">Enhanced Productivity</h3>
-                        <p class="features__info-text">Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+                <li class="contact-info__item">
+                    <img class="contact-info__img" src="img/enhanced-icon-min.svg" width="72" height="72" alt="enhanced-icon">
+                    <div class="contact-info__info">
+                        <p class="contact-info__info-text">How we help drive innovation</p>
                     </div>
                 </li>
             </ul>
         </div>
-    </section>
 
-    <!-- REVIEWS -->
-    <section class="reviews">
-        <div class="reviews__container container">
-            <h2 class="reviews__title">Delivering real results for top companies. Some of our success stories.</h2>
-            <ul class="reviews__list">
-                <li class="reviews__item">
-                    <p class="review__text"> “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
-                    <div class="review__wrapper">
-                        <h3 class="review__name">Kady Baker</h3>
-                        <p class="review__info-about">Product Manager at Bookmark</p>
-                        <img class="review__img" src="img/kady-min.svg" alt="guy img">
-                    </div>
-                </li>
-                <li class="reviews__item">
-                    <p class="review__text">“Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”</p>
-                    <div class="review__wrapper">
-                        <h3 class="review__name">Aiysha Reese</h3>
-                        <p class="review__info-about">Founder of Manage</p>
-                        <img class="review__img" src="img/aisha-min.svg" alt="guy img">
-                    </div>
-                </li>
-                <li class="reviews__item">
-                    <p class="review__text">“We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”</p>
-                    <div class="review__wrapper">
-                        <h3 class="review__name">Arthur Clarke</h3>
-                        <p class="review__info-about">Co-founder of MyPhysio</p>
-                        <img class="review__img" src="img/arthur-min.svg" alt="guy img">
-                    </div>
-                </li>
-            </ul>
+        <!-- contact-input -->
+        <div class="contact-input__container container">
+            <form class="contact-input__form" action="yoo">
+
+                <input class="contact-input__input" type="text" id="fname" placeholder="Name" name="name">
+
+                <input class="contact-input__input" type="email" id="lname" placeholder="Email Address" name="email">
+
+                <input class="contact-input__input" type="text" id="fname" placeholder="Company Name" name="company name">
+
+                <input class="contact-input__input" type="text" id="fname" placeholder="Title" name="title">
+
+                <!-- <label class="contact-input__label" for="subject">Message</label> -->
+                <textarea class="contact-input__textarea" id="subject" placeholder="Message" name="subject" style="height:200px"></textarea>
+
+                <a class="site-header__button button" href="#">submit</a>
+
+            </form>
         </div>
     </section>
 
-    <!-- CTA -->
-    <section class="cta">
-        <div class="cta__container container">
-            <h2 class="cta__title">Ready to get started?</h2>
-            <a class="cta__button button" href="#">contact us</a>
-        </div>
-    </section>
 
     <!-- SITE-FOOTER -->
     <footer class="site-footer">
