Fix contact-info page button

--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,9 @@
                 <input class="contact-input__input" type="text" id="fname" placeholder="Title" name="title">
 
                 <!-- <label class="contact-input__label" for="subject">Message</label> -->
-                <textarea class="contact-input__textarea" id="subject" placeholder="Message" name="subject" style="height:200px"></textarea>
+                <textarea class="contact-input__textarea" id="subject" placeholder="Message" name="subject" style="height:100px"></textarea>
 
-                <a class="site-header__button button" href="#">submit</a>
+                <a class="contact-input__button button" href="#">submit</a>
 
             </form>
         </div>
