--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             </a>
             <ul class="site-header__list">
                 <li class="site-header__item">
-                    <a href="#" class="site-header__link">home</a>
+                    <a href="index.html" class="site-header__link">home</a>
                 </li>
                 <li class="site-header__item">
-                    <a href="#" class="site-header__link">about</a>
+                    <a href="about.html" class="site-header__link">about</a>
                 </li>
             </ul>
-            <a class="site-header__button button">contact us</a>
+            <a class="site-header__button button" href="contact.html">contact us</a>
         </div>
     </header>
 
@@ -119,7 +119,7 @@
     <section class="cta">
         <div class="cta__container container">
             <h2 class="cta__title">Ready to get started?</h2>
-            <a class="cta__button button" href="#">contact us</a>
+            <a class="cta__button button" href="contact.html">contact us</a>
         </div>
     </section>
 
@@ -133,10 +133,10 @@
                 </a>
                 <ul class="site-footer__list">
                     <li class="site-footer__item">
-                        <a href="#" class="site-footer__link">home</a>
+                        <a href="index.html" class="site-footer__link">home</a>
                     </li>
                     <li class="site-footer__item">
-                        <a href="#" class="site-footer__link">about</a>
+                        <a href="about.html" class="site-footer__link">about</a>
                     </li>
                 </ul>
             </div>
