--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                 <img class="director__img" src="img/home/nikita-min.svg" alt="one of directors" width="96" height="96">
                 <h3 class="directors__name">Nikita Marks</h3>
                 <p class="directors__job-title">Founder & CEO</p>
-                <a class="directors__cycle rotate">
+                <a class="directors__cycle">
                     <svg class="directors__cycle__inner-link" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10 0H6V6H0V10H6V16H10V10H16V6H10V0Z" fill="currentColor"/>
                     </svg>
@@ -78,7 +78,7 @@
                 <img class="director__img" src="img/home/cristian-min.svg" alt="one of directors" width="96" height="96">
                 <h3 class="directors__name">Cristian Duncan</h3>
                 <p class="directors__job-title">Co-founder & COO</p>
-                <a class="directors__cycle rotate">
+                <a class="directors__cycle">
                     <svg class="directors__cycle__inner-link" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10 0H6V6H0V10H6V16H10V10H16V6H10V0Z" fill="currentColor"/>
                     </svg>
@@ -91,7 +91,7 @@
                 <img class="director__img" src="img/home/cruz-min.svg" alt="one of directors" width="96" height="96">
                 <h3 class="directors__name">Cruz Hamer</h3>
                 <p class="directors__job-title">Co-founder & CTO</p>
-                <a class="directors__cycle rotate">
+                <a class="directors__cycle">
                     <svg class="directors__cycle__inner-link" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10 0H6V6H0V10H6V16H10V10H16V6H10V0Z" fill="currentColor"/>
                     </svg>
@@ -104,7 +104,7 @@
                 <img class="director__img" src="img/home/drake-min.svg" alt="one of directors" width="96" height="96">
                 <h3 class="directors__name">Drake Heaton</h3>
                 <p class="directors__job-title">Business Development Lead</p>
-                <a class="directors__cycle rotate">
+                <a class="directors__cycle">
                     <svg class="directors__cycle__inner-link" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10 0H6V6H0V10H6V16H10V10H16V6H10V0Z" fill="currentColor"/>
                     </svg>
@@ -117,7 +117,7 @@
                 <img class="director__img" src="img/home/griffin-min.svg" alt="one of directors" width="96" height="96">
                 <h3 class="directors__name">Griffin Wise</h3>
                 <p class="directors__job-title">Lead Marketing</p>
-                <a class="directors__cycle rotate">
+                <a class="directors__cycle">
                     <svg class="directors__cycle__inner-link" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10 0H6V6H0V10H6V16H10V10H16V6H10V0Z" fill="currentColor"/>
                     </svg>
@@ -130,14 +130,14 @@
                 <h3 class="directors__name">Aden Allan</h3>
                 <p class="directors__opinion">“Empowered teams create truly amazing products. Set the north star and let them follow it.”</p>
                 <div class="directors__socials">
-                    <a class="directors__social" href="#">
-                        <img class="directors__social-icon" src="img/icon-twitter-min.svg" alt="twitter icon">
+                    <a class="directors__social-link" href="#">
+                        <svg width="24" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 2.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337.608a9.864 9.864 0 0 1-3.127 1.195A4.916 4.916 0 0 0 16.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 0 1 1.671 1.149a4.93 4.93 0 0 0 1.523 6.574 4.903 4.903 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.928 4.928 0 0 0 4.6 3.419A9.9 9.9 0 0 1 0 17.54a13.94 13.94 0 0 0 7.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0 0 24 2.557z" fill="currentColor"/></svg>
                     </a>
-                    <a class="directors__social" href="#">
-                        <img class="directors__social-icon" src="img/home/linkedin-icon-min.svg" alt="linkedin icon">
+                    <a class="directors__social-link" href="#">
+                        <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 0h16c1.1 0 2 .9 2 2v16c0 1.1-.9 2-2 2H2c-1.1 0-2-.9-2-2V2C0 .9.9 0 2 0zm4 17V8H3v9h3zM4.5 6.3c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.8 1.8-1.8 1.8zM14 17h3v-5.7c0-1.9-1.6-3.5-3.5-3.5-.9 0-2 .6-2.5 1.4V8H8v9h3v-5.3c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5V17z" fill="currentColor"/></svg>
                     </a>
                 </div>
-                <a class="directors__cycle-last rotate">
+                <a class="directors__cycle-last">
                     <svg class="directors__cycle__inner-link" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10 0H6V6H0V10H6V16H10V10H16V6H10V0Z" fill="currentColor"/>
                     </svg>
